attempt #2 to fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -117,5 +117,6 @@ h1 {
 }
 
 foreignObject {
+    position: relative;
     -webkit-overflow-scrolling: touch;
 }
